--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -66,6 +66,43 @@ a{
 
 /* Data table Styling */
 
+div.dt-buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom:10px;
+}
+
+/* GENERATE PDF BUTTON */
+.btn-group>.btn-group:not(:first-child)>.btn, .btn-group>.btn:nth-child(n+3), .btn-group>:not(.btn-check)+.btn:hover{
+  background-color: white !important;
+  color: #188045;
+  border: 2px #188045 solid;
+}
+
+.btn-group>.btn-group:not(:first-child)>.btn, .btn-group>.btn:nth-child(n+3), .btn-group>:not(.btn-check)+.btn{
+  background-color: #188045 !important;
+  color: rgb(255, 255, 255);
+  border: 2px white solid;
+  border-radius: 10px;
+  max-width: 200px;
+}
+
+/* GENERATE EXCEL BUTTON */
+.btn-group>.btn-group:not(:last-child)>.btn, .btn-group>.btn:not(:last-child):not(.dropdown-toggle):hover{
+  background-color: white !important;
+  color: #188045;
+  border: 2px #188045 solid;
+  
+}
+
+.btn-group>.btn-group:not(:last-child)>.btn, .btn-group>.btn:not(:last-child):not(.dropdown-toggle){
+  background-color: #188045 !important;
+  color: white;
+  border: 2px white solid;
+  border-radius: 10px;
+  max-width: 200px;
+}
 
 .page-link {
   color:#1bb15c !important;
