--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Status.html
@@ -64,32 +64,32 @@
 <!-- Dashboard -->
 <div class="" id="secondNav">
     <div class="row align-items-center"> 
-        <div class="col-6 d-flex text-md-start text-center text-uppercase align-items-center ">
+        <div class="col-xl-8 col-md-6 col-12 text-md-start text-center d-flex align-items-center justify-content-md-start justify-content-center">
             {% if preschooler.suffix_name is None %}
-                <h5 class="m-0 align-items-center">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }}'s Immunization</h5>
+                <h5 class="m-0 align-items-center text-capitalize">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }}'s Immunization</h5>
             {% else %}
-                <h5 class="m-0 align-items-center">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.suffix_name }}'s Immunization</h5>
+                <h5 class="m-0 align-items-center text-capitalize">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.suffix_name }}'s Immunization</h5>
             {% endif %}
         </div>
-        <div class="col-6 d-flex justify-content-md-end justify-content-center align-items-stretch">
-        {% if loggedin == 'BHW' %}
-            <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#guide" ><span class="fas fa-table"></span> Guide</button>
-            <button style="background-color: #188045; color: white; margin-left:2%;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update" ><span class="far fa-calendar"></span> Update</button>
-            
-            <form method="POST" action="">
-                {% csrf_token %}
-                <button style="background-color: #188045; color: white; margin-left:2%;" name="PDF" type="submit" class="btn" ><span class="fa fa-file-pdf"></span> Print PDF</button>
-            </form>
-            
-        {% else %}
-            <div class="">
-                <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#guide"><span class="fas fa-table"></span> Guide</button>
-                <form method="POST" action="">
-                    {% csrf_token %}
-                    <button style="background-color: #188045; color: white; margin-left:2%;" name="PDF" type="submit" class="btn" ><span class="fa fa-file-pdf"></span> Print PDF</button>
-                </form>
+        <div class="col-xl-4 col-md-6 col-12">
+            <div class="row d-flex justify-content-center align-items-stretch">
+                <div class=" d-flex justify-content-md-end justify-content-center align-items-stretch gap-2">
+                    {% if loggedin == 'BHW' %}
+                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#guide" ><span class="fas fa-table"></span> Guide</button>
+                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update" ><span class="far fa-calendar"></span> Update</button>
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <button style="background-color: #188045; color: white;" name="PDF" type="submit" class="btn" ><span class="fa fa-file-pdf"></span> Print PDF</button>
+                    </form>
+                    {% else %}
+                        <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#guide"><span class="fas fa-table"></span> Guide</button>
+                        <form method="POST" action="">
+                            {% csrf_token %}
+                            <button style="background-color: #188045; color: white;" name="PDF" type="submit" class="btn" ><span class="fa fa-file-pdf"></span> Print PDF</button>
+                        </form>
+                    {% endif %}
+                </div>
             </div>
-        {% endif %}
         </div>
     </div>
 </div>
