--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -50,9 +50,9 @@
 <div class="row m-0" id="secondNav"> 
     <div class="col-xl-8 col-md-6 col-12 d-flex align-items-center justify-content-md-start justify-content-center mb-1">
         {% if preschooler.suffix_name is None %}
-            <h5 class="text-md-start text-center text-uppercase m-0">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }}'s Profile</h5>
+            <h5 class="text-md-start text-center text-capitalize m-0">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }}'s Profile</h5>
         {% else %}
-            <h5 class="text-md-start text-center text-uppercase m-0">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.suffix_name }}'s Profile</h5>
+            <h5 class="text-md-start text-center text-capitalize m-0">{{ preschooler.last_name }}, {{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.suffix_name }}'s Profile</h5>
         {% endif %}
     </div>
     <div class="col-xl-4 col-md-6 col-12 mb-1">
