--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -22,7 +22,7 @@
     <script src="{% static '/CSS/DataTables/Buttons-1.7.1/js/buttons.bootstrap5.js' %}"></script>
 
 
-<title>Preschooler Status | PPMS </title>
+<title>PPMS | Preschooler Status</title>
 </head>
 <body>
 
@@ -378,7 +378,7 @@
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
                     <div class="d-flex justify-content-md-end justify-content-center my-2">
-                        <button class="btn" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc" ><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
+                        <button class="btn hoverableButton" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc" ><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
                     </div>
                     <div class="table-responsive" >
                         <table class="table table-hover table-cell-border" id="adminPreschoolerList" >
