--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler_barangay.html
@@ -1,7 +1,7 @@
 {% extends 'activities/Admin Home.html' %} <!-- header and footer of page linked from admin home html file -->
 {% load static %}
 {% block dashboard %}
-<title>Preschooler Status | PPMS </title>
+<title>PPMS | Preschooler Status</title>
 </head>
 <body>
 
@@ -305,7 +305,7 @@
                     </div>
                     <div class="card shadow-lg p-3 bg-white rounded" >
                         <div class="d-flex justify-content-end my-2">
-                            <button class="btn" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc" style="max-width: 15%!important;"><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
+                            <button class="btn hoverableButton" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc" style="max-width: 15%!important;"><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
                         </div>
                         <div class="table-responsive" >
                             <table class="table table-hover table-cell-border" id="adminPreschoolerList" >
