--- a/ppms_project/profilingApp/templates/activities/Admin - barangay.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - barangay.html
@@ -1,7 +1,7 @@
 {% extends 'activities/Admin Home.html' %} <!-- header and footer of page linked from admin home html file -->
 {% load static %}
 {% block dashboard %}
-<title>Barangay List | PPMS </title>
+<title>PPMS | Barangay List</title>
 </head>
 <body>
 
@@ -127,7 +127,7 @@
                     <h3 style="text-align:left;">List of barangay</h3>
                 </div>
                 <div class="col-sm-6 d-flex align-items-center justify-content-md-end justify-content-center">
-                    <button style="margin-bottom: 0px; background-color: #188045;border-color:#188045; height: 50px;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBrgy">
+                    <button style="margin-bottom: 0px; background-color: #188045;border-color:#188045; height: 50px;" type="button" class="btn hoverableButton btn-primary" data-bs-toggle="modal" data-bs-target="#addBrgy">
                         <span class="fas fa-landmark"></span>  Add Barangay</button>
                 </div>
             </div>
