--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -16,9 +16,10 @@
      <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
      <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
      <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
+     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
     {% block dashboard%}
-    <title>Home | PPMS </title>
+    <title>PPMS | Home</title>
 </head>
 <body>
 <!-- Header -->
