--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -20,7 +20,7 @@
 
 
    {% block dashboard %} 
-    <title>{{ bhw.user.first_name }} {{ bhw.user.last_name }} | Home</title>
+    <title>PPMS | Home</title>
 </head>
 <body>
 <!-- Header -->
