--- a/ppms_project/profilingApp/templates/activities/Change Password.html
+++ b/ppms_project/profilingApp/templates/activities/Change Password.html
@@ -12,7 +12,7 @@
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
-    <title>{{ user.first_name }} {{ user.last_name }} | Profile </title>
+    <title>PPMS | {{ user.first_name }} {{ user.last_name }}</title>
     <!-- Header -->
 </head>
 
