--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -21,7 +21,7 @@
 
 
     {% block dashboard %}   
-    <title>{{ parent.user.first_name }} {{ parent.user.last_name }} | Home </title>
+    <title>PPMS | Home </title>
 </head>
         <!-- Header -->
     <div class="site-header">
@@ -89,7 +89,7 @@
                     <h5 class="m-0"style="text-align:left;">My Preschoolers</h5>
                 </div>
                 <div class="col-sm-6 d-flex justify-content-sm-end justify-content-center align-items-center">
-                    <button style="background-color: #188045;border-color:#188045;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched">
+                    <button style="background-color: #188045;border-color:#188045;" type="button" class="btn hoverableButton btn-primary" data-bs-toggle="modal" data-bs-target="#addSched">
                         <span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
                 </div>
             </div>
