--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 
-<title>{{ preschooler.first_name }} {{ preschooler.last_name }}'s Profile | PPMS </title>
+<title>PPMS | {{ preschooler.first_name }} {{ preschooler.last_name }}'s Profile</title>
 </head>
 
 <header>
@@ -58,8 +58,8 @@
     <div class="col-xl-4 col-md-6 col-12 mb-1">
         <div class="row d-flex justify-content-center align-items-stretch">
             <div class="d-flex justify-content-md-end justify-content-center align-items-stretch">
-                <button style="background-color: #188045; color: white; max-height: 70px !important; height: 100%;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> History</button>
-                <a href="{% url 'immunization_schedule' preschooler.id %}"><button style="background-color: #188045; color: white; margin-left:10px; max-height: 70px !important;" type="button" class="btn"><span class="fa fa-address-card"></span> Immunization Status</button></a>
+                <button style="background-color: #188045; color: white; max-height: 70px !important; height: 100%;" type="button" class="btn hoverableButton" data-bs-toggle="modal" data-bs-target="#pres_history"><span class="fas fa-history"></span> History</button>
+                <a href="{% url 'immunization_schedule' preschooler.id %}"><button style="background-color: #188045; color: white; margin-left:10px; max-height: 70px !important;" type="button" class="btn hoverableButton"><span class="fa fa-address-card"></span> Immunization Status</button></a>
             </div>
         </div>
     </div>
