--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block dashboard %}
 
-<title>Preschooler Profile | PPMS</title>
+<title>PPMS | Preschooler Profile</title>
 </head>
 <body>
 
@@ -64,10 +64,10 @@
         <div class="col-xl-4 col-md-6 col-12">
             <div class="row d-flex justify-content-center align-items-stretch">
                 <div class=" d-flex justify-content-md-end justify-content-center align-items-stretch gap-2">
-                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#update" ><span class="fa fa-user-edit "></span> Update</button>
-                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#history" ><span class="fas fa-history "></span> History </button>
+                    <button style="background-color: #188045; color: white;" type="button" class="btn hoverableButton" data-bs-toggle="modal" data-bs-target="#update" ><span class="fa fa-user-edit "></span> Update</button>
+                    <button style="background-color: #188045; color: white;" type="button" class="btn hoverableButton" data-bs-toggle="modal" data-bs-target="#history" ><span class="fas fa-history "></span> History </button>
                     <a href="{% url 'immunization_schedule' preschooler.id %}"  data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="5,5"
-                    title="Go to Immunization Status" style="background-color: #188045; color: white; text-align: center;" type="button" class="btn"><span class=" fa fa-address-card"></span> Immunization</a>
+                    title="Go to Immunization Status" style="background-color: #188045; color: white; text-align: center;" type="button" class="btn hoverableButton"><span class=" fa fa-address-card"></span> Immunization</a>
                 </div>
             </div>
         </div>
@@ -113,7 +113,7 @@
                                                 {% endif %}
                                                 </div>
                                                 <div class="d-flex justify-content-center align-items-center text-center p-2">
-                                                    <button style="background-color: #188045; color: white;" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#pres_changepic" >
+                                                    <button style="background-color: #188045; color: white;" type="button" class="btn hoverableButton" data-bs-toggle="modal" data-bs-target="#pres_changepic" >
                                                         <span class="fa fa-image "></span> Change Image</button>
                                                 </div>
                                             </div>
@@ -194,12 +194,28 @@
                                                     <h5 class="modal-title fw-bold" id="exampleModalLabel"><i class="fas fa-image" style="color:#188045"></i> Change Profile Picture</h5>
                                                 </div>
                                             </div>
-                                            <div class="modal-body d-flex justify-content-center align-items-center text-uppercase p-2">
+                                            <div class="bg-muted modal-body d-flex justify-content-center align-items-center text-capitalize">
                                                 <form method="POST" enctype="multipart/form-data">
                                                     {% csrf_token %}
-                                                    <div class="md-form mb-3">
-                                                        {{ changepic_form.ps_image }}
+                                                    <div class="md-form mb-3 d-flex justify-content-center align-items-center text-center gap-3 p-4">
+                                                        <div class="row d-flex ">
+                                                            <div class="d-flex justify-content-center align-items-center text-center flex-column">
+                                                                <h5 class="fw-bold text-success">Current Image</h5>
+                                                                <img class="rounded-circle hoverableImage2" src="/Media/{{ preschooler.ps_image }}" style="min-width: 85px; max-width: 200px;">
+                                                                <div class="text-center">
+                                                                    <input type="checkbox" name="ps_image-clear" id="ps_image-clear_id">
+                                                                    <label class="mt-2 " for="ps_image-clear_id">Set to Default Image</label>
+                                                                </div>
+                                                                <hr style="color: #333333;">
+                                                                <div class="d-block justify-content-center align-items-center gap-3">
+                                                                    <h5 class="fw-bold text-success"> Change Image</h5>
+                                                                    <input style="margin-left:100px;" type="file" name="ps_image" accept="image/*" id="id_ps_image">
+                                                                    <h6 class="text-muted text-capitalize mt-3">the current image will be replaced by the chosen image</h6>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
+                                                    
                                             </div>
                                             <div class="modal-footer text-end ">
                                                 <button type="button" class="btn" style="background-color: #EF3A25; color: white; min-width: 15%;" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
